--- a/avaliacoes/index.html
+++ b/avaliacoes/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8"> 
     <title>Atividades avaliativas</title>
+    <link rel="stylesheet" type="text/css" href="atividade4/styles.css">
   </head>
   <body>
     <header>
@@ -9,10 +10,11 @@
     </header>
     <nav>
       <a href="/../index.html">Ínicio</a> /
-      <a href="atividade1/index.html">Atividade Avaliativa 1</a> /  
-      <a href="atividade2/index.html">Atividade Avaliativa 2</a> /
+      <a href="atividade1/index.html">Atividade Avaliativa 1</a> /
+      <a href="atividade2/index.html">Atividade Avaliativa 2</a> / 
       <a href="atividade3/index.html">Atividade Avaliativa 3</a> /
-      <a href="atividade3/arte.html">Galeria de Artes</a> /  
+      <a href="atividade4/index.html">Atividade Avaliativa 4</a> / 
+      <a href="atividade3/arte.html">Galeria de Arte</a> /  
     </nav>  
   </body>
 </html>
