--- a/avaliacoes/atividade4/atividade.html
+++ b/avaliacoes/atividade4/atividade.html
@@ -2,8 +2,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Atividades</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+    <header>
     <h1>Atividades</h1>
     <ul>
       <li><a href="index.html">Ínicio</a></li>
